# Algebra

./: .gitignore  CMakeLists.txt
include/: GF2Extension.hh  GFPrime.hh  Matrix.hh
test/: GF2ExtensionTest.cc  GFPrimeTest.cc  MatrixTest.cc
